--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "json2csv": "^6.0.0-alpha.2",
+    "next": "15.0.3",
+    "normalize.css": "^8.0.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "sass": "^1.81.0"
   }
 }
