--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "json2csv": "^6.0.0-alpha.2",
+    "@json2csv/plainjs": "^7.0.6",
     "next": "15.0.3",
     "normalize.css": "^8.0.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-icons": "^5.3.0",
     "sass": "^1.81.0"
   }
 }
